# rust-base

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
benches/: serialization_benchmark.rs
examples/: serde_example.rs
src/: lib.rs  main.rs
tests/: integration_tests.rs
