[package]
name = "rust_base"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # Add missing dependency

[dev-dependencies]
criterion = "0.5.1" 

[[bench]]
name = "serialization_benchmark"
harness = false

[[bin]]
name = "user"
path = "src/main.rs"
